White space fixed: deleted from all htmls menus

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,19 +300,18 @@
 
 .menu {
   width: 100%;
-  height: 1097px;
-  background-color: red;
-  margin-bottom: 0;
+  height: auto;
 }
 .menu .banniereRestaurant {
   max-width: 100%;
-  height: 600px;
+  height: 500px;
 }
 .menu .banniereRestaurant img {
   width: 100%;
   height: 600px;
   object-fit: cover;
   object-position: 50% 50%;
+  position: absolute;
   overflow: hidden;
 }
 @media (max-width: 768px) {
@@ -323,14 +322,14 @@
 }
 .menu .menu__restaurant {
   border-radius: 35px 35px 0 0;
-  background-color: #fff;
   width: 80%;
+  height: auto;
   margin: 0 10%;
   z-index: 1;
   display: flex;
   flex-direction: column;
   position: relative;
-  bottom: 160px;
+  bottom: 0px;
   background-color: #f6f6f6;
 }
 @media (max-width: 768px) {
@@ -482,6 +481,8 @@ footer {
   width: auto;
   height: auto;
   padding: 5px;
+  padding-top: 10px;
+  z-index: 1;
 }
 footer h2 {
   font-family: "Shrikhand", cursive;
