--- a/sass/main.scss
+++ b/sass/main.scss
@@ -328,19 +328,19 @@ $imgRestaurant: (width: 100px, height: 50px);
 
 .menu{
     width: 100%;
-    height: 1097px;
-    background-color: red;
-    margin-bottom: 0;
+    height: auto;
+
     .banniereRestaurant{
         max-width: 100%;
-        height: 600px;
+        height: 500px;
         img{
             width: 100%;
             height: 600px;
             object-fit: cover;
             object-position: 50% 50%;
-             overflow: hidden;
-             @media (max-width: 768px){
+            position:absolute;
+            overflow: hidden;
+            @media (max-width: 768px){
                  object-fit:cover;
                  object-position: 40% 30%;
              }
@@ -348,14 +348,14 @@ $imgRestaurant: (width: 100px, height: 50px);
     }
     .menu__restaurant{
         border-radius: 35px 35px 0 0;
-        background-color: #fff;
         width: 80%;
+        height: auto;
         margin: 0 10%;
         z-index: 1;
         display: flex;
         flex-direction: column;
         position: relative;
-        bottom: 160px;
+        bottom: 0px;
         background-color: $quintClr;
         @media (max-width: 768px){
             width: 100%;
@@ -514,6 +514,9 @@ footer{
     width: auto;
     height: auto;
     padding: 5px;
+    padding-top: 10px;
+    z-index: 1;
+
 
   
     h2{
